Added Mongoose commands to replace MongoDB commands
